--- a/src/index.html
+++ b/src/index.html
@@ -205,7 +205,7 @@
       </div>
     </div>
 
-    <div class="backdrop is-hidden" data-film-modal data-modal-close>
+    <div class="backdrop is-hidden" data-film-modal>
       <div class="modal-film">
         <button class="btn-modal-close" type="button" data-modal-close>
           <svg class="btn-modal-close__svg">
