--- a/src/index.html
+++ b/src/index.html
@@ -205,7 +205,7 @@
       </div>
     </div>
 
-    <div class="backdrop is-hidden" data-film-modal data-modal-close>
+    <div class="backdrop is-hidden" data-film-modal>
       <div class="modal-film">
         <button class="btn-modal-close" type="button" data-modal-close>
           <svg class="btn-modal-close__svg">
@@ -248,10 +248,10 @@
               </p>
             </div>
             <div class="modal-film__btn-grup">
-              <button class="modal-film__btn" type="button">
+              <button class="modal-film__btn" type="button" id="add_to_watched">
                 ADD TO WATCHED
               </button>
-              <button class="modal-film__btn" type="button">
+              <button class="modal-film__btn" type="button" id="add_to_queue">
                 ADD TO QUEUE
               </button>
             </div>
