--- a/src/index.html
+++ b/src/index.html
@@ -97,8 +97,12 @@
         </div>
 
         <div class="modal-film__btn-grup">
-          <button class="modal-film__btn" type="button">ADD TO WATCHED</button>
-          <button class="modal-film__btn" type="button">ADD TO QUEUE</button>
+          <button class="modal-film__btn" type="button" data-add-watched>
+            ADD TO WATCHED
+          </button>
+          <button class="modal-film__btn" type="button" data-add-queue>
+            ADD TO QUEUE
+          </button>
         </div>
       </div>
     </div>
