--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
           </svg>
         </button>
         <div class="modal-film__film-card" data-film-card>
-          <!-- -->
+          <!--Modal content -->
         </div>
 
         <div class="modal-film__btn-grup">
